<resources>
    <string name="app_name">Inventory App</string>
    <string name="no_products_found">No products found</string>
    <string name="add_some_products_to_get_started">Add some products to get started</string>
    <string name="floating_button">Floating button</string>
    <string name="empty_trolley">Empty Trolley</string>
    <string name="product_name">Product Name:</string>
    <string name="product_name_in_editor">Product Name</string>
    <string name="condtion_editor">Condtion :</string>
    <string name="price_of_product">Price :</string>
    <string name="price_hint">E.g. 499</string>
    <string name="rupee">₹</string>
    <string name="quantity_editor">Quantity :</string>
    <string name="quantity_hint">E.g. 10</string>
    <string name="quantity_pcs">pcs</string>
    <string name="add_product_button">Add Product</string>
    <string name="remove_product_button">Remove Product</string>
    <string name="item_name_list">Item Name</string>
    <string name="condition_list">Condition</string>
    <string name="circular_bracket_open">(</string>
    <string name="circular_bracket_closed">)</string>
    <string name="quntity_hint_value_list">5</string>
    <string name="pcs_list">pcs</string>
    <string name="price_list">price</string>
    <string name="rupees_list">₹</string>
    <string name="content_description_shopping_button">Shopping Button</string>
    <string name="insert_dummy_node">Insert Dummy Node</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="delete_appbar">Delete</string>
    <string name="save_appbar">Save</string>
    <string name="unknown_condition">Unknown</string>
    <string name="new_condition">New</string>
    <string name="used_condition">Used</string>
    <string name="order_more">Order More</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_mail_id_hint">Supplier Mail id</string>
    <string name="supplier_info">Supplier Info:</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="photo_editor">Photo</string>
    <string name="image_of_the_product">Image of the product</string>
    <string name="add_new_photo_text">Tap to add photo</string>
    <string name="change_photo_text">Tap to change photo</string>
    <string name="product_image_content_description">Product Image</string>
</resources>