<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/product_name_in_editor"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:text="@string/photo_editor"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_product_photo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:maxHeight="140dp"
                android:minHeight="130dp"
                android:scaleType="centerInside"
                android:src="@drawable/add_product_image"
                android:contentDescription="@string/image_of_the_product" />

            <TextView
                android:id="@+id/add_photo_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tap_to_add_photo"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/condtion_editor"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_condition"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:text="@string/supplier_info"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_mail_id_hint"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_of_product"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/rupee"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/quantity_editor"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/quantity_hint"
                android:inputType="number"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/quantity_pcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/quantity_pcs"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/removeProductButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_product_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>

</ScrollView>